--- a/configure.ac
+++ b/configure.ac
@@ -2533,7 +2533,8 @@ int main()
 			 AC_MSG_RESULT(no)])
 		    ])
 		AC_CHECK_FUNCS(_getshort _getlong)
-		AC_CHECK_DECLS([_getshort, _getlong])
+		AC_CHECK_DECLS([_getshort, _getlong], , ,
+		    [#include <arpa/nameser.h>])
 		AC_CHECK_MEMBER(HEADER.ad,
 			[AC_DEFINE(HAVE_HEADER_AD)],,
 			[#include <arpa/nameser.h>])
