--- a/configure.ac
+++ b/configure.ac
@@ -81,7 +81,7 @@ AC_C_INLINE
 AC_CHECK_DECL(LLONG_MAX, have_llong_max=1, , [#include <limits.h>])
 
 if test "$GCC" = "yes" || test "$GCC" = "egcs"; then
-	CFLAGS="$CFLAGS -Wall -Wpointer-arith -Wno-uninitialized"
+	CFLAGS="$CFLAGS -Wall -Wpointer-arith -Wuninitialized"
 	CFLAGS="$CFLAGS -Wsign-compare"
 
 	if test -z "$have_llong_max"; then
