- (dtucker) [configure.ac] Test libedit library and headers for compatibility.    Report from skeleten AT shillest.net, ok djm@

--- a/configure.ac
+++ b/configure.ac
@@ -1023,6 +1023,20 @@ AC_ARG_WITH(libedit,
 			[ AC_MSG_ERROR(libedit not found) ],
 			[ -lcurses ]
 		)
+		AC_MSG_CHECKING(if libedit version is compatible)
+		AC_TRY_COMPILE([#include <histedit.h>],
+		    [
+int main(void)
+{
+	int i = H_SETSIZE;
+	el_init("", NULL, NULL, NULL);
+	exit(0);
+}
+		    ],
+		    [ AC_MSG_RESULT(yes) ],
+		    [ AC_MSG_RESULT(no)
+		      AC_MSG_ERROR(libedit version is not compatible) ]
+		)
 	fi ]
 )
 
