- (dtucker) [configure.ac defines.h includes.h sftp.c] Add support for    LynxOS, patch from Olli Savia (ops at iki.fi).  ok djm@

--- a/configure.ac
+++ b/configure.ac
@@ -555,6 +555,12 @@ mips-sony-bsd|mips-sony-newsos4)
 	AC_DEFINE(NEED_SETPRGP, [], [Need setpgrp to acquire controlling tty])
 	AC_DEFINE(HAVE_SYS_SYSLOG_H, 1, [Force use of sys/syslog.h on Ultrix])
 	;;
+
+*-*-lynxos)
+        CFLAGS="$CFLAGS -D__NO_INCLUDE_WARN__"
+        AC_DEFINE(MISSING_HOWMANY)
+        AC_DEFINE(BROKEN_SETVBUF, 1, [LynxOS has broken setvbuf() implementation])
+        ;;
 esac
 
 # Allow user to specify flags
