- (dtucker) [configure.ac sshd.8] Enable locked account check (a prepended    "*LOCKED*" string) for FreeBSD.  Patch jeremie at le-hen.org and    senthilkumar_sen at hotpop.com.

--- a/configure.ac
+++ b/configure.ac
@@ -398,6 +398,7 @@ mips-sony-bsd|mips-sony-newsos4)
 	;;
 *-*-freebsd*)
 	check_for_libcrypt_later=1
+	AC_DEFINED(LOCKED_PASSWD_PREFIX, "*LOCKED*")
 	;;
 *-*-bsdi*)
 	AC_DEFINE(SETEUID_BREAKS_SETUID)
