- (dtucker) [configure.ac defines.h openbsd-compat/vis.{c,h}] Sync current    versions from OpenBSD.  ok djm@

--- a/configure.ac
+++ b/configure.ac
@@ -418,6 +418,7 @@ mips-sony-bsd|mips-sony-newsos4)
 	;;
 *-*-openbsd*)
 	AC_DEFINE(HAVE_ATTRIBUTE__SENTINEL__, 1, [OpenBSD's gcc has sentinel])
+	AC_DEFINE(HAVE_ATTRIBUTE__BOUNDED__, 1, [OpenBSD's gcc has bounded])
 	;;
 *-*-solaris*)
 	if test "x$withval" != "xno" ; then
