- (djm) [misc.c] Disable tunnel code for non-OpenBSD (for now), enable    again by providing a sys_tun_open() function for your platform and    setting the CUSTOM_SYS_TUN_OPEN define. More work is required to match    OpenBSD's tunnel protocol, which prepends the address family to the    packet

--- a/configure.ac
+++ b/configure.ac
@@ -359,6 +359,7 @@ mips-sony-bsd|mips-sony-newsos4)
 *-*-openbsd*)
 	AC_DEFINE(HAVE_ATTRIBUTE__SENTINEL__, 1, [OpenBSD's gcc has sentinel])
 	AC_DEFINE(HAVE_ATTRIBUTE__BOUNDED__, 1, [OpenBSD's gcc has bounded])
+	AC_DEFINE(SSH_TUN_BSD, 1, [Open tunnel devices the BSD way])
 	;;
 *-*-solaris*)
 	if test "x$withval" != "xno" ; then
