- (dtucker) [Makefile.in configure.ac, added openbsd-compat/regress/]    Add first attempt at regress tests for compat library.  ok djm@

--- a/Makefile.in
+++ b/Makefile.in
@@ -410,6 +410,9 @@ tests:	$(TARGETS)
 		EXEEXT="$(EXEEXT)" \
 		$@
 
+compat-tests: $(LIBCOMPAT)
+	(cd openbsd-compat/regress && $(MAKE))
+
 regressclean:
 	if [ -f regress/Makefile ] && [ -r regress/Makefile ]; then \
 		(cd regress && $(MAKE) clean) \
