- (djm) [md-sha256.c configure.ac] md-sha256.c needs sha2.h if present

--- a/configure.ac
+++ b/configure.ac
@@ -690,6 +690,7 @@ AC_CHECK_HEADERS( \
 	readpassphrase.h \
 	rpc/types.h \
 	security/pam_appl.h \
+	sha2.h \
 	shadow.h \
 	stddef.h \
 	stdint.h \
