- (dtucker) [configure.ac md-sha256.c] NetBSD has sha2.h in    /usr/include/crypto.  Hint from djm@.

--- a/configure.ac
+++ b/configure.ac
@@ -669,6 +669,7 @@ dnl Checks for header files.
 AC_CHECK_HEADERS( \
 	bstring.h \
 	crypt.h \
+	crypto/sha2.h \
 	dirent.h \
 	endian.h \
 	features.h \
