- (dtucker) [README.platform configure.ac openbsd-compat/port-tun.c] Add    tunnel support for Mac OS X/Darwin via a third-party tun driver.  Patch    from reyk@, tested by anil@

--- a/configure.ac
+++ b/configure.ac
@@ -231,6 +231,11 @@ main() { if (NSVersionOfRunTimeLibrary("System") >= (60 << 16))
 	AC_DEFINE(BROKEN_SETREGID)
 	AC_DEFINE_UNQUOTED(BIND_8_COMPAT, 1,
 		[Define if your resolver libs need this for getrrsetbyname])
+	AC_DEFINE(SSH_TUN_FREEBSD, 1, [Open tunnel devices the FreeBSD way])
+	AC_DEFINE(SSH_TUN_COMPAT_AF, 1,
+	    [Use tunnel device compatibility to OpenBSD])
+	AC_DEFINE(SSH_TUN_PREPEND_AF, 1,
+	    [Prepend the address family to IP tunnel traffic])
 	;;
 *-*-hpux*)
 	# first we define all of the options common to all HP-UX releases
@@ -682,6 +687,7 @@ AC_CHECK_HEADERS( \
 	login.h \
 	maillock.h \
 	ndir.h \
+	net/if_tun.h \
 	netdb.h \
 	netgroup.h \
 	pam/pam_appl.h \
