- (dtucker) [channels.c configure.ac serverloop.c] Bug #1102: Around AIX    4.3.3 ML3 or so, the AIX pty layer starting passing zero-length writes    on the pty slave as zero-length reads on the pty master, which sshd    interprets as the descriptor closing.  Since most things don't do zero    length writes this rarely matters, but occasionally it happens, and when    it does the SSH pty session appears to hang, so we add a special case for    this condition.  ok djm@

--- a/configure.ac
+++ b/configure.ac
@@ -190,6 +190,7 @@ case "$host" in
 		supported by bsd-setproctitle.c])
 	AC_DEFINE(SSHPAM_CHAUTHTOK_NEEDS_RUID, 1,
 	    [AIX 5.2 and 5.3 (and presumably newer) require this])
+	AC_DEFINE(PTY_ZEROREAD, 1, [read(1) can return 0 for a non-closed fd])
 	;;
 *-*-cygwin*)
 	check_for_libcrypt_later=1
