--- a/openbsd-compat/regress/Makefile.in
+++ b/openbsd-compat/regress/Makefile.in
@@ -14,7 +14,7 @@ LIBS=@LIBS@
 LDFLAGS=-L.. -lopenbsd-compat @LDFLAGS@
 
 LIBCOMPAT=../libopenbsd-compat.a
-TESTPROGS=strtonumtest strduptest snprintftest
+TESTPROGS=closefromtest strtonumtest strduptest snprintftest
 
 all:	t-exec ${OTHERTESTS}
 
@@ -31,6 +31,9 @@ strtonumtest: strtonumtest.c $(LIBCOMPAT)
 
 strduptest: strduptest.c $(LIBCOMPAT)
 	$(CC) $(CFLAGS) $(CPPFLAGS) -o strduptest $< $(LDFLAGS)
+
+closefromtest: closefromtest.c $(LIBCOMPAT)
+	$(CC) $(CFLAGS) $(CPPFLAGS) -o closefromtest $< $(LDFLAGS)
 
 clean:
 	rm -f *.o *.a core $(TESTPROGS) valid.out
