- (dtucker) [configure.ac includes.h openbsd-compat/glob.{c,h}] Explicitly    test for GLOB_NOMATCH and use our glob functions if it's not found.    Stops sftp from segfaulting when attempting to get a nonexistent file on    Cygwin (previous versions of OpenSSH didn't use the native glob). Partly    from and tested by Corinna Vinschen.

--- a/configure.ac
+++ b/configure.ac
@@ -982,6 +982,8 @@ AC_TRY_COMPILE(
 	]
 )
 
+AC_CHECK_DECLS(GLOB_NOMATCH, , , [#include <glob.h>])
+
 AC_MSG_CHECKING([whether struct dirent allocates space for d_name])
 AC_RUN_IFELSE(
 	[AC_LANG_SOURCE([[
