- (dtucker) [configure.ac openbsd-compat/openbsd-compat.h] Check for    declaration of writev(2) and declare it ourselves if necessary.  Makes    the atomiciov() calls build on really old systems.  ok djm@

--- a/configure.ac
+++ b/configure.ac
@@ -1328,6 +1328,12 @@ AC_CHECK_DECLS(O_NONBLOCK, , ,
 #endif
 	])
 
+AC_CHECK_DECLS(writev, , , [
+#include <sys/types.h>
+#include <sys/uio.h>
+#include <unistd.h>
+	])
+
 AC_CHECK_FUNCS(setresuid, [
 	dnl Some platorms have setresuid that isn't implemented, test for this
 	AC_MSG_CHECKING(if setresuid seems to work)
