--- a/configure.ac
+++ b/configure.ac
@@ -512,8 +512,7 @@ mips-sony-bsd|mips-sony-newsos4)
 		TEST_SHELL=/u95/bin/sh
 		AC_DEFINE(BROKEN_LIBIAF, 1,
 			[ia_uinfo routines not supported by OS yet])
-		AC_DEFINE(BROKEN_UPDWTMP, 1,
-			[using updwtmp will corrupt wtmp entries])
+		AC_DEFINE(BROKEN_UPDWTMPX)
 		;;
 	*)	AC_DEFINE(LOCKED_PASSWD_STRING, "*LK*")
 		;;
